--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,1 @@
-<b>Ini adalah halaman web aplikasi ruby v3.2.2</b> - Febriyan Adji Saputro (195410236)
+<b>pw3ik4FmNhYYwO2YcGql21MWxM7T8jSymUmqZQ7BL6QZV1CKiY</b>
